<resources>
    <string name="app_name">ant.ly</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="register">Register</string>
    <string name="login">Username</string>
    <string name="add_new_offer">Add offer</string>
    <string name="create_an_account">You do not have an account yet?</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_registration">RegistrationActivity</string>


    <!-- offer_element !-->
    <string name="title">Title</string>
    <string name="subject">Przedmiot</string>
    <string name="price">0 zł/h</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="added_courses">Added courses</string>
    <string name="home">home</string>
    <string name="add">Add</string>
    <string name="something_went_wrong">Something went wrong, try again.</string>
    <string name="bought_courses">Bought courses</string>
    <string name="account">Account</string>
    <string name="localization">Localization</string>
    <string name="level">Level</string>
    <string name="category">Category</string>
    <string name="search_for_classes">Search for courses</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="price_string">Price</string>
    <string name="addingOffer">Add an offer</string>
    <string name="editingOffer">Edit an offer</string>
    <string name="subject_category">Subject category</string>
    <string name="max_of_signs_title">0/30</string>
    <string name="required">*Required</string>
    <string name="short_description">Short description</string>
    <string name="max_of_signs_short_description">0/70</string>
    <string name="long_description">Long description</string>
    <string name="max_of_signs_long_description">0/200</string>
    <string name="picture_url">Picture URL</string>
    <string name="lorem_ipsum_short">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies facilisis sapien, vel dictum magna rhoncus posuere. Phasellus placerat felis nec urna tempor viverra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. "</string>
    <string name="show_details">Show details</string>
    <string name="nickname">smarszalek</string>
    <string name="primary_school">Primary School</string>
    <string name="delete_offer">X</string>
    <string name="your_offers">Your offers</string>
    <string name="delete_offer_confirmation">Are you sure you want to delete this offer?</string>
    <string name="cancel_editing_offer">Are you sure you want to cancel deleting this offer?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="no_offers">You have not added any offer yet</string>
    <string name="hello">Hello</string>
    <string name="added_offers">YOUR ADDED OFFERS</string>
    <string name="username">smarszalek</string>
    <string name="favorite_offers">YOUR FAVORITE OFFERS</string>
    <string name="help">Help</string>
    <string name="rules">Rules</string>
    <string name="contact">Contact</string>
    <string name="about_app">About application</string>
    <string name="settings_and_informations">Settings and informations</string>
    <string name="logout">Log out</string>
    <string name="edit_offer">Edit offer</string>
    <string name="delete_offer_text">Delete offer</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="incorrect_login_or_password">*Incorrect login or password</string>
    <string name="your_name">Your name</string>
    <string name="your_surname">Your surname</string>
    <string name="fill_all">Every field is required</string>
    <string name="passwords_are_not_the_same">Passwords are not the same</string>
    <string name="login_too_short">Username must be longer than or equal to 4 characters</string>
    <string name="password_too_short">Password must be longer than or equal to 8 characters</string>
    <string name="username_taken">This username is already taken.</string>
    <string name="no_results">No results match your search criteria</string>

</resources>